# scanDnsToDB

./: CMakeLists.txt  README.md  core.cpp  dns.cpp  domain.sql  httpController.cpp  httpController.h  install.sh  main.cpp  my.ini  mysql_controller.h  scanDnsToDB  some_error.h
HeaderFile/: controller_class.h  dns_class.h  global.h  mysql_class.h
SourceFile/: controller_class.cpp  dns_class.cpp  mysql_class.cpp
version1.1/: README.md  core.cpp  global.h  install.sh  mysql_controller.cpp  scanNet.cpp  scanNet.h  some_error.h
